# QDomoticz

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/QDomoticzBackend/: CMakeLists.txt  DomoticzObjects.h  QDomoticzBackend.cpp  QDomoticzBackend.h  QDomoticzBackend_global.h  QDomoticzController.cpp  QDomoticzController.h  ScenesModel.cpp  ScenesModel.h  SwitchesModel.cpp  SwitchesModel.h
app/testBackend/: CMakeLists.txt  QDomoticzTest.cpp  QDomoticzTest.h  QDomoticzTest.ui  main.cpp
